# intellidyn_v1

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  todo.txt
api_company/: Cargo.toml
api_company/src/: lib.rs
api_customization_request/: Cargo.toml
api_customization_request/src/: lib.rs
api_dydb/: Cargo.toml
api_functional_area/: Cargo.toml
api_functional_area/src/: lib.rs
api_index/: Cargo.toml
api_index/src/: handler.rs  main.rs
api_segment/: Cargo.toml
api_segment/src/: lib.rs
api_user/: Cargo.toml
api_user/src/: lib.rs
company/: Cargo.toml
company/src/: lib.rs
customization_request/: Cargo.toml
customization_request/src/: lib.rs
define_company/: Cargo.toml
define_company/src/: lib.rs
dydb/: Cargo.toml
dydb/src/: lib.rs
functional_area/: Cargo.toml
functional_area/src/: lib.rs
index/: Cargo.toml
index/src/: handler.rs  main.rs
segment/: Cargo.toml
segment/src/: lib.rs
user/: Cargo.toml
user/src/: lib.rs
