[workspace]
members = [
    "index",
    "dydb",
    "define_company"
]

[workspace.dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
lambda_http = "0.7.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.33"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"