[workspace]
members = [
    "index",
    "dydb",
    "user",
    "customization_request",
    "company",
    "segment",
    "functional_area"
]

[workspace.dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
lambda_http = "0.7.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.33"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
async-trait = "0.1.64"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
bcrypt = "0.14.0"