[package]
name = "api_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
lambda_http.workspace = true
serde.workspace = true
serde_json.workspace = true

[dependencies.api_dydb]
path = "../api_dydb"

[dependencies.api_company]
path = "../api_company"

[dependencies.api_user]
path = "../api_user"

[dependencies.api_segment]
path = "../api_segment"