[package]
name = "index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
lambda_http.workspace = true
serde.workspace = true
serde_json.workspace = true

[dependencies.dydb]
path = "../dydb"

[dependencies.define_company]
path = "../define_company"